objects/Account.object
<CustomObject>
    <fields>
        <fullName>Segmentacion_Liquidez_Codigo__c</fullName>
        <label>Segmentacion Liquidez Codigo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minorista</fullName>
                </value>
                <value>
                    <fullName>Mayorista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmentacion_Liquidez_SubCodigo__c</fullName>
        <label>Segmentacion Liquidez SubCodigo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emisores y operadores de tarjetas de credito bancarios y no bancarios</fullName>
                </value>
                <value>
                    <fullName>Sin Clasificar</fullName>
                </value>
                <value>
                    <fullName>Minoristas personas naturales</fullName>
                </value>
                <value>
                    <fullName>Otros minoristas</fullName>
                </value>
                <value>
                    <fullName>Banco Central del país</fullName>
                </value>
                <value>
                    <fullName>Tesoreria General de la República</fullName>
                </value>
                <value>
                    <fullName>Otros bancos del país</fullName>
                </value>
                <value>
                    <fullName>Cooperativas fiscalizadas por la SBIF</fullName>
                </value>
                <value>
                    <fullName>Bancos extranjeros</fullName>
                </value>
                <value>
                    <fullName>Fondos de pensiones del pais</fullName>
                </value>
                <value>
                    <fullName>Administradoras generales de fondos del país</fullName>
                </value>
                <value>
                    <fullName>Compañias de seguros del pais</fullName>
                </value>
                <value>
                    <fullName>Corredores de bolsa y agentes de valores del pais</fullName>
                </value>
                <value>
                    <fullName>Otras entidades financieras no bancarias del país</fullName>
                </value>
                <value>
                    <fullName>Mayoristas(*) no financieros del pais</fullName>
                </value>
                <value>
                    <fullName>Mayoristas(*) extranjeros no bancarios</fullName>
                </value>
                <value>
                    <fullName>Emisores  y operadores de tarjetas de credito bancarios y no bancarios</fullName>
                    <isActive>false</isActive>
                    <label>Emisores  y operadores de tarjetas de credito bancarios y no bancarios</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <description>Segmentation, used in customer creation form for Personas Naturales and Jurídicas</description>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banca Joven</fullName>
                </value>
                <value>
                    <fullName>Banca Personas</fullName>
                </value>
                <value>
                    <fullName>Banca Preferente</fullName>
                </value>
                <value>
                    <fullName>Banca Privada</fullName>
                </value>
                <value>
                    <fullName>Banca Universitaria</fullName>
                </value>
                <value>
                    <fullName>Corporaciones</fullName>
                </value>
                <value>
                    <fullName>Empresas</fullName>
                </value>
                <value>
                    <fullName>Empresas Personales</fullName>
                </value>
                <value>
                    <fullName>Grandes Empresas</fullName>
                </value>
                <value>
                    <fullName>Persona Natural</fullName>
                </value>
                <value>
                    <fullName>Sector Financiero</fullName>
                </value>
                <value>
                    <fullName>Sector Inmobiliario y Construcción</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No es Cliente</fullName>
                </value>
                <value>
                    <fullName>Cliente Banco</fullName>
                </value>
                <value>
                    <fullName>Cliente Inversiones</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situacion_Laboral__c</fullName>
        <label>Situación Laboral</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Socios_de_la_empresa_Grupo_Econ_mico__c</fullName>
        <label>Socios de la empresa/Grupo Economico</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Sector_Economico__c</fullName>
        <label>Sub-Sector Económico</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Administradoras de fondos de pensiones</fullName>
                </value>
                <value>
                    <fullName>Agencias de valores, administradores de fondos nacionales e internacionales</fullName>
                </value>
                <value>
                    <fullName>Caja de compensación</fullName>
                </value>
                <value>
                    <fullName>Compañías corredoras de bolsas de comercio</fullName>
                </value>
                <value>
                    <fullName>Compañías de fondos mutuos</fullName>
                </value>
                <value>
                    <fullName>Companías de leasing, factoring, créditos comerciales</fullName>
                </value>
                <value>
                    <fullName>Compañías de seguros</fullName>
                </value>
                <value>
                    <fullName>Créditos de consumo</fullName>
                </value>
                <value>
                    <fullName>Créditos en cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>Créditos libre disponibilidad</fullName>
                </value>
                <value>
                    <fullName>Servicios Financieros</fullName>
                </value>
                <value>
                    <fullName>Sociedades de inversión</fullName>
                </value>
                <value>
                    <fullName>Sociedades de tarjetas de crédito</fullName>
                </value>
                <value>
                    <fullName>Sociedades financieras</fullName>
                </value>
                <value>
                    <fullName>Agricultura tradicional, cultivos anuales</fullName>
                </value>
                <value>
                    <fullName>Hortalizas, Flores y Rosa Mosqueta</fullName>
                </value>
                <value>
                    <fullName>Infraestructura predial</fullName>
                </value>
                <value>
                    <fullName>Otros productos agropecuarios</fullName>
                </value>
                <value>
                    <fullName>Industria de alimentos congelados</fullName>
                </value>
                <value>
                    <fullName>Industria de alimentos para animales</fullName>
                </value>
                <value>
                    <fullName>Industria de bebidas, jugos y licores</fullName>
                </value>
                <value>
                    <fullName>Industria de carnes</fullName>
                </value>
                <value>
                    <fullName>Industria de dulces conservas, frutas secas y galletas</fullName>
                </value>
                <value>
                    <fullName>Industria de los molinos, cereales</fullName>
                </value>
                <value>
                    <fullName>Industria de pastas, fideos</fullName>
                </value>
                <value>
                    <fullName>Industria de productos lácteos</fullName>
                </value>
                <value>
                    <fullName>Industria del aceite, margarina, mayonesa</fullName>
                </value>
                <value>
                    <fullName>Industria del azucar</fullName>
                </value>
                <value>
                    <fullName>Industria del tabaco</fullName>
                </value>
                <value>
                    <fullName>Industrias de cecinas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsegmento__c</fullName>
        <label>Subsegmento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mujer</fullName>
                </value>
                <value>
                    <fullName>Universitario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sucursal_BI__c</fullName>
        <label>Sucursal BI</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sucursal_Banco__c</fullName>
        <label>Sucursal Banco</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sucursal_creaci_n_registro__c</fullName>
        <description>Este campo se completa con la Sucursal que el Ejecutivo que crea el registro tenga definida en su perfil.</description>
        <label>Sucursal creación registro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Susceptible_conflicto_de_interes__c</fullName>
        <label>Susceptible conflicto de interés</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pago de IVA´s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiene_Cuenta_Corriente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requerido para informes Profin. Flow lo pega en Lead correspondiente.</description>
        <label>Tiene Cuenta Corriente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiene_Garantia_Hipotecaria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requerido para informes Profin. Flow lo pega en Lead correspondiente.</description>
        <label>Tiene Garantía Hipotecaria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiene_Margen_Hipotecario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requerido para informes Profin. Flow lo pega en Lead correspondiente.</description>
        <label>Tiene Margen Hipotecario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_Cliente_Gestion__c</fullName>
        <label>Tipo Cliente Gestión</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personas Naturales</fullName>
                </value>
                <value>
                    <fullName>Mediana Empresa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_cuenta_DCV__c</fullName>
        <label>Tipo cuenta DCV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ninguna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Banca__c</fullName>
        <label>Tipo de Banca</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Cliente__c</fullName>
        <description>Tipo de Cliente Inversiones</description>
        <label>Tipo de Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inversionista</fullName>
                </value>
                <value>
                    <fullName>Institucional</fullName>
                </value>
                <value>
                    <fullName>Interpósita persona</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Persona__c</fullName>
        <label>Tipo de Persona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Persona Natural</fullName>
                </value>
                <value>
                    <fullName>Otras Instituciones Jurídcas</fullName>
                </value>
                <value>
                    <fullName>Sin Definir</fullName>
                </value>
                <value>
                    <fullName>Sociedad Anónima</fullName>
                </value>
                <value>
                    <fullName>Sociedad Colectiva</fullName>
                </value>
                <value>
                    <fullName>Sociedad de Responsabilidad</fullName>
                </value>
                <value>
                    <fullName>Sociedad en Comandita</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_cliente_empresa__c</fullName>
        <label>Tipo Cliente Empresa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nacional</fullName>
                </value>
                <value>
                    <fullName>Extranjera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_perfil_comercial__c</fullName>
        <label>Tipo perfil comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiproducto Persona Natural</fullName>
                </value>
                <value>
                    <fullName>Multiproducto Persona Jurídica</fullName>
                </value>
                <value>
                    <fullName>Clientes Administración de Cartera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_relaci_n__c</fullName>
        <label>Tipo relación</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X360_Inv_Rentabilidad_12_APV__c</fullName>
        <label>360 Inv Rentabilidad 12 APV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_Inv_Rentabilidad_12_USD__c</fullName>
        <label>360 Inv Rentabilidad 12 USD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_MASCO__c</fullName>
        <label>360 MASCO</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_Nmb_Subsegmento__c</fullName>
        <label>360 Nmb Subsegmento</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X360_SPREAD_BRUT__c</fullName>
        <label>360 SPREAD BRUT</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_SPREAD_PROM__c</fullName>
        <label>360 SPREAD PROM</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_View_Alertas_Banco__c</fullName>
        <formula>IF((X360_view_Deterioro__c&amp;&amp;X360_view_Defuncion__c&amp;&amp;X360_view_Mora__c),
	IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYl&quot;,&quot;Deterioro&quot;,23,23)&amp;&quot; &quot;&amp;
	IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYo&quot;,&quot;Mora&quot;,23,23)&amp;&quot; &quot;&amp;
        IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYk&quot;,&quot;Defunción&quot;,23,23),
		IF((X360_view_Deterioro__c&amp;&amp;X360_view_Defuncion__c),
			IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYl&quot;,&quot;Deterioro&quot;,23,23)&amp;&quot; &quot;&amp;
			IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYk&quot;,&quot;Defunción&quot;,23,23),
				IF((X360_view_Deterioro__c&amp;&amp;X360_view_Mora__c),
					IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYl&quot;,&quot;Deterioro&quot;,23,23)&amp;&quot; &quot;&amp;
					IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYo&quot;,&quot;Mora&quot;,23,23),
						IF((X360_view_Mora__c&amp;&amp;X360_view_Defuncion__c),
							IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYo&quot;,&quot;Mora&quot;,23,23)&amp;&quot; &quot;&amp;
							IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYk&quot;,&quot;Defunción&quot;,23,23),							
							IF((X360_view_Deterioro__c),
								IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYl&quot;,&quot;Deterioro&quot;,23,23),
								IF((X360_view_Mora__c),
									IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYo&quot;,&quot;Mora&quot;,23,23),
										IF((X360_view_Defuncion__c),
										  IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000004oYk&quot;,&quot;Defunción&quot;,23,23),null
										)
								)

							)
						)	
				)	
		)
)</formula>
        <label>360 View Alertas Banco</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X360_View_Cluster__c</fullName>
        <description>Vista 360: Persona Juridica</description>
        <label>360 View Cluster</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X360_View_Deuda_BICE__c</fullName>
        <description>vista 360</description>
        <label>360 View Deuda BICE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X360_View_Deuda_SBIF__c</fullName>
        <description>vista 360</description>
        <label>360 View Deuda SBIF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X360_View_Dolares_BICE__c</fullName>
        <description>Vista 360: Persona Jurídica</description>
        <label>360 View Dolares BICE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_View_Fecha_Ultimo_Balance__c</fullName>
        <description>Vista 360</description>
        <label>360 View Fecha Ultimo Balance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X360_View_Fecha_Ultimo_IVA__c</fullName>
        <description>vista 360</description>
        <label>360 View Fecha Ultimo IVA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X360_View_MN_Creditos_Pasivos__c</fullName>
        <description>360 view</description>
        <label>360 View MN Creditos Pasivos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X360_View_MX_Creditos_Pasivos__c</fullName>
        <description>vista 360</description>
        <label>X360 View MX Creditos Pasivos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X360_view_Company__c</fullName>
        <label>360 view Company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X360_view_Current_Exposure_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Vista 360 - Inversiones</description>
        <label>360 view Current Exposure Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X360_view_Defuncion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vista 360: Alertas Banco</description>
        <label>360 view Defuncion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X360_view_Deterioro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vista 360: Alertas Banco</description>
        <label>360 view Deterioro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X360_view_EyC_Filled_Data_Client__c</fullName>
        <formula>(IF( ISPICKVAL(Clasificacion_de_Riesgo_SBIF__c, &quot;&quot;),0,1) 
+IF(ISBLANK(X360_view_IVC__c),0,1) 
+IF(ISPICKVAL(Segmento__c,&quot;&quot;),0,1) 
+IF(ISBLANK(Monto_MAC_creado__c),0,1))/4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>360 view EyC Filled Data Client</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X360_view_IVC__c</fullName>
        <label>360 view IVC</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X360_view_Line_Duedate__c</fullName>
        <description>Vista 360: Personas Jurídica</description>
        <label>360 view Line Duedate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X360_view_MN_Saldos_Activos__c</fullName>
        <label>360 view MN Saldos Activos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X360_view_MX_Saldos_Activos__c</fullName>
        <description>vista 360</description>
        <label>360 view MX Saldos Activos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X360_view_Maximum_exposure_level__c</fullName>
        <defaultValue>(0)</defaultValue>
        <description>Vista 360 - Inversiones</description>
        <label>360 view Maximum exposure level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X360_view_Mora__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vista 360: Alertas Banco</description>
        <label>360 view Mora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X360_view_Net_Profit_Group_PJ__c</fullName>
        <label>360 view Net Profit Group PJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_view_Net_Profit_Group__c</fullName>
        <label>360 view Net Profit Group</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_view_Net_Profit__c</fullName>
        <description>Vista 360 Personas Naturales</description>
        <label>360_view_Net_Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_view_Occupation__c</fullName>
        <label>360 view Occupation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X360_view_Total_Risk__c</fullName>
        <description>Vista 360 Persona Jurídica</description>
        <label>360 view Total Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X360_view_mail_icon__c</fullName>
        <description>IF( 
ISPICKVAL(Favorite_Channel__c, &apos;Correo&apos;), 
(IMAGE(&quot;/servlet/servlet.FileDownload?file=0152C000000FLtH&quot;, &quot;/servlet/servlet.FileDownload?file=0152C000000FLtH&quot;)),&quot;&quot;
),
IF( 
ISPICKVAL(Favorite_Channel__c, &apos;Teléfono&apos;), 
(IMAGE(&quot;/servlet/servlet.FileDownload?file=0152C00000090HW&quot;, &quot;/servlet/servlet.FileDownload?file=0152C000000FLtH&quot;)),&quot;&quot;
)</description>
        <formula>IMAGE( 
CASE(Favorite_Channel__c, 
&quot;Correo&quot;, &quot;/servlet/servlet.FileDownload?file=0152C000000FLtH&quot;,
&quot;Teléfono&quot;, &quot;/servlet/servlet.FileDownload?file=0152C00000090HW&quot;,
&quot;/servlet/servlet.FileDownload?file=0152C00000090Hb&quot;), 
&quot;&quot;,30,30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>360 view mail icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apellidoMaterno__c</fullName>
        <description>Solo para Creacion PJ Inversiones</description>
        <label>ApellidoMaterno</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apellidoPaterno__c</fullName>
        <description>Solo para Creación Clientes PJ Inversiones</description>
        <label>ApellidoPaterno</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commercial_cellphone__c</fullName>
        <label>Teléfono móvil Comercial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>n_AUX__c</fullName>
        <formula>LEN( RUT_sin_puntos_AUX__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>n AUX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>naturalidad__c</fullName>
        <description>Para Tipos de Registro Cuentas Empresas nominadas en la fórmula devuelve &quot;JUR&quot;, para todas las demás devuelve &quot;NAT&quot;</description>
        <formula>case( RecordType.DeveloperName , &quot;Business_Account&quot;,&quot;JUR&quot;,&quot;Cuenta_Empresa_en_CIF&quot;,&quot;JUR&quot;,&quot;NAT&quot;)</formula>
        <label>naturalidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rut_inv__c</fullName>
        <description>Requerido para Creación Cliente PJ Inversiones</description>
        <inlineHelpText>Requerido para Creación Cliente Persona Jurídica de Inversiones</inlineHelpText>
        <label>Rut inv</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Clientes_Banca_Privada</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>IS_PERSON_ACCOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RUT__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Contact_RUT__pc</columns>
        <columns>Fecha_de_vencimiento_MAC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segmentation__c</field>
            <operation>equals</operation>
            <value>Banca Privada</value>
        </filters>
        <label>Clientes Banca Privada</label>
        <language>en_US</language>
        <sharedTo>
            <group>Todos_menos_Profin</group>
            <role>Assistant_Private_Banking_Division_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mis_Cuentas_Persona</fullName>
        <columns>RUT__c</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_PHONE4</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Mis Cuentas Personas</label>
        <language>es</language>
        <sharedTo>
            <roleAndSubordinates>Retail_Banking_Assistant_Division_Manager</roleAndSubordinates>
            <roleAndSubordinates>Retail_Banking_Regional_Manager_Zona_3</roleAndSubordinates>
            <roleAndSubordinatesInternal>Division_Inversiones</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Mis Clientes</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>RUT__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Nuevos de esta semana</label>
        <language>en_US</language>
        <sharedTo>
            <group>Todos_menos_Profin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_Birthday</fullName>
        <columns>RUT__c</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_PHONE4</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount,PersonAccount.Cuentas_personales_en_CIF</value>
        </filters>
        <filters>
            <field>Annual_birthday_date__pc</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Cumpleaños de hoy</label>
        <language>es</language>
        <sharedTo>
            <roleAndSubordinates>Retail_Banking_Assistant_Division_Manager</roleAndSubordinates>
            <roleAndSubordinates>Retail_Banking_Regional_Manager_Zona_3</roleAndSubordinates>
            <roleAndSubordinatesInternal>Corporate_Asistant_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Banca_Empresas_y_Corporaciones</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Inversiones</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Cuenta Empresa</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cuenta_Empresa_en_CIF</fullName>
        <active>true</active>
        <label>Cuenta Empresa en CIF</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EyC_no_permite_cambiar_nombre_cuenta</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    AND(
        NOT(ISNEW()),
        ISCHANGED(Name)
        ),TRUE,FALSE
    )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>No puede cambiar el nombre de la cuenta</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Formato_de_RUT</fullName>
        <active>false</active>
        <description>Para el campo RUT, obliga al usuario a poner el &quot;-&quot; antes del dígito verificador y valida que el RUT no contenga números y comas.</description>
        <errorConditionFormula>NOT(ISBLANK(RUT__c)) &amp;&amp;
NOT(CONTAINS(LEFT(RIGHT( RUT__c , 2),1), &quot;-&quot;)) || CONTAINS(RUT__c,&quot;,&quot;) || CONTAINS(RUT__c,&quot;.&quot;)</errorConditionFormula>
        <errorDisplayField>RUT__c</errorDisplayField>
        <errorMessage>El formato ingresado no es válido, ingrese sin puntos y con guión Ej: 11111111-1</errorMessage>
    </validationRules>
</CustomObject>